--- a/shoes/css/shoes.css
+++ b/shoes/css/shoes.css
@@ -1,3 +1,14 @@
+.nav-container{
+  display: flex;
+  height: 50px;
+  padding: 10px;
+  align-items: center;
+}
+.nav-item{
+  margin-right: 10px;
+}
+
+
 
 /* lorem ipsum */
 /* w3schools.com */
