--- a/shoes/css/shoes.css
+++ b/shoes/css/shoes.css
@@ -135,7 +135,16 @@ div ,input, textarea {
   width: 25%;
   text-align: center;
 }
-
+.product-container i{
+  background-color: burlywood;
+  width: 100px;
+  height: 100px;
+  padding-top: 25px;
+  margin-top: 20px;
+  border-radius: 50px;
+  color: white;
+  box-sizing: border-box;
+}
 
 @media screen and (max-width:1200px){
 /* 화면의 크기가 1200px 이하일때 적용할 css를 기술 */
