--- a/shoes/css/shoes.css
+++ b/shoes/css/shoes.css
@@ -145,6 +145,45 @@ div ,input, textarea {
   color: white;
   box-sizing: border-box;
 }
+.shop-bg{
+  background-color: #eee;
+  padding: 20px;
+}
+.shop-container{
+  display: flex;
+  width: 90%;
+  margin: auto;
+}
+.shop-item{
+  width: 33%;
+  padding: 10px;  
+}
+.shop-item img{
+  width: 100%;
+  display: block;
+}
+/* 애니메이셩 처리 */
+/* 1. 시작 스타일 정하기 */
+.overlay{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  /* 애니메이션 속도 조절 */
+  transition: all 2s;
+  
+}
+
+/* 2. 최종 스타일 정함 */
+/* 3. 언제 최종 스타일로 변할지 정함.(트리거) - hover */
+.overlay:hover{
+  opacity: 1;
+}
+/* 4. transition 으로 서서히 동작하기 */
+
+
+
 
 @media screen and (max-width:1200px){
 /* 화면의 크기가 1200px 이하일때 적용할 css를 기술 */
